# EmmyLuaCodeStyle

./: .clang-format  .editorconfig  .gitignore  .lualint.json  .pre-commit-hooks.yaml  CHANGELOG.md  CHANGELOG_CN.md  CHANGELOG_EN.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  emmyluacodestyle-scm-1.rockspec  lua.template.editorconfig  template.editorconfig
3rd/uriparser/: CMakeLists.txt  THANKS
3rd/uriparser/src/: config.h
CodeFormat/: CMakeLists.txt
CodeFormat/src/: CodeFormat.cpp  FormatContext.cpp  FormatContext.h  LuaCheck.cpp  LuaCheck.h  LuaFormat.cpp  LuaFormat.h  LuaWorkspaceFormat.cpp  LuaWorkspaceFormat.h  Types.h  Util.cpp  Util.h
CodeFormatCLib/: CMakeLists.txt
CodeFormatCLib/include/: CodeFormatCLib.h
CodeFormatCLib/src/: CodeFormat.cpp  CodeFormat.h  CodeFormatCLib.cpp  Types.h  UtilTypes.h
CodeFormatCSharpLib/: CMakeLists.txt
CodeFormatCSharpLib/src/: CodeFormat.cpp  CodeFormat.h  CodeFormatCSharpLib.cpp  Types.h
CodeFormatCore/: CMakeLists.txt
CodeFormatCore/src/Config/: EditorconfigPattern.cpp  FunctionOption.cpp  FunctionOption.h  LanguageTranslator.cpp  LuaDiagnosticStyle.cpp  LuaEditorConfig.cpp  LuaStyle.cpp
CodeFormatCore/src/Diagnostic/: DiagnosticBuilder.cpp
CodeFormatCore/src/Format/: FormatBuilder.cpp  FormatState.cpp
CodeFormatCore/src/RangeFormat/: MultiRangesFormatBuilder.cpp  RangeFormatBuilder.cpp
CodeFormatCore/src/TypeFormat/: LuaTypeFormat.cpp  LuaTypeFormatFeatures.cpp  LuaTypeFormatOptions.cpp
CodeFormatLib/: CMakeLists.txt
CodeFormatLib/src/: CodeFormatLib.cpp  LuaCodeFormat.cpp  LuaCodeFormat.h  LuaJIT-Compact.cpp  LuaJIT-Compact.h  Types.h
CodeFormatServer/: CMakeLists.txt
CodeFormatServer/src/: CodeFormatServer.cpp  FileManager.cpp  LanguageClient.cpp  LanguageServer.cpp  LanguageServer.h  LanguageService.cpp  VSCode.cpp  main.cpp
CodeFormatServer/src/Config/: ClientConfig.cpp  ClientConfig.h
CodeFormatServer/src/DB/: DBBase.h  FileDB.cpp  FileDB.h  LineIndexDB.cpp  LineIndexDB.h  UriDB.cpp  UriDB.h
CodeFormatServer/src/Indexs/: ModuleIndex.cpp
CodeFormatServer/src/LSP/: LSP.cpp  LSP.h  LSPHandle.cpp  LSPHandle.h
CodeFormatServer/src/Protocol/: ProtocolBuffer.cpp  ProtocolParser.cpp
CodeFormatServer/src/Service/: CodeActionService.cpp  CodeActionService.h  CodeFormatService.cpp  CommandService.cpp  CommandService.h  CompletionService.cpp  ConfigService.cpp  ConfigService.h  DiagnosticService.cpp  DiagnosticService.h  FormatService.cpp  FormatService.h  ModuleService.cpp  Service.cpp  Service.h  ServiceType.h
CodeFormatServer/src/Session/: IOSession.cpp  IOSession.h  SocketIOSession.cpp  SocketIOSession.h  StandardIOSession.cpp  StandardIOSession.h
CodeFormatServer/src/VFS/: VirtualFile.cpp  VirtualFile.h  VirtualFileSystem.cpp  VirtualFileSystem.h
CodeFormatServer/src/VirtualFile/: VirtualFile.cpp
CodeService/: CMakeLists.txt
CodeService/src/: AstUtil.cpp  CodeService.cpp  LanguageTranslator.cpp  LuaCodeDiagnosis.cpp  LuaCodeStyleOptions.cpp  LuaEditorConfig.cpp  LuaFormatOptions.cpp  LuaFormatter.cpp  LuaLinter.cpp  LuaLinterConfig.cpp  LuaLinterOptions.cpp  LuaLinterType.cpp  LuaStyle.cpp  LuaTypeFormat.cpp
CodeService/src/Config/: EditorconfigPattern.cpp  FunctionOption.cpp  FunctionOption.h  LanguageTranslator.cpp  LuaDiagnosticStyle.cpp  LuaEditorConfig.cpp  LuaStyle.cpp
CodeService/src/DiagnosisElement/: DiagnosisElement.cpp  EqSymbolAlignDiagnosis.cpp  IndentDiagnosis.cpp  LineLayoutDiagnosis.cpp  MaxLineDiagnosis.cpp
CodeService/src/Diagnostic/: DiagnosticBuilder.cpp  StyleDiagnostic.cpp
CodeService/src/Format/: FormatBuilder.cpp  FormatState.cpp
CodeService/src/FormatElement/: AlignIfLayoutElement.cpp  AlignToFirstElement.cpp  AlignmentElement.cpp  AlignmentLayoutElement.cpp  BreakableElement.cpp  CallArgsListLayoutElement.cpp  DiagnosisContext.cpp  ExpressionElement.cpp  FormatContext.cpp  FormatElement.cpp  IndentElement.cpp  IndentOnLineBreakElement.cpp  KeepBlankElement.cpp  KeepElement.cpp  KeepLayoutElement.cpp  KeepLineElement.cpp  KeyWordElement.cpp  LineElement.cpp  LongExpressionLayoutElement.cpp  MaxLineElement.cpp  MaxSpaceElement.cpp  MinLineElement.cpp  NoIndentElement.cpp  OperatorElement.cpp  PlaceholderElement2.cpp  RangeFormatContext.cpp  SepElement.cpp  SerializeContext.cpp  SpaceElement.cpp  StatementElement.cpp  StringLiteralElement.cpp  SubExpressionElement.cpp  TextElement.cpp
CodeService/src/NameStyle/: CheckElement.cpp  NameStyleChecker.cpp  NameStyleRuleMatcher.cpp
CodeService/src/RangeFormat/: RangeFormatBuilder.cpp
CodeService/src/Spell/: CodeSpellChecker.cpp  IdentifyParser.cpp  LuaDict.hpp  TextParser.cpp
CodeService/src/TypeFormat/: LuaTypeFormat.cpp  LuaTypeFormatOptions.cpp
LuaCompile/: CMakeLists.txt
LuaCompile/src/Lib/: CMakeLists.txt
LuaCompile/src/Lua/: CMakeLists.txt
LuaCompile/src/Workspace/: CMakeLists.txt  LuaWorkspace.cpp  LuaWorkspace.h
LuaParser/: CMakeLists.txt
LuaParser/src/: LuaAstNode.cpp  LuaAstVisitor.cpp  LuaCustomParser.cpp  LuaDefine.h  LuaDocParser.cpp  LuaDocTokenParser.cpp  LuaFile.cpp  LuaIdentify.cpp  LuaParseException.cpp  LuaParser.cpp  LuaTokenParser.cpp  LuaTokenTypeDetail.h  TextRange.cpp
LuaParser/src/Ast/: LuaAstNode.cpp  LuaAstTree.cpp  LuaSyntaxMultiKind.cpp  LuaSyntaxNode.cpp  LuaSyntaxNodeKind.cpp  LuaSyntaxTree.cpp
LuaParser/src/File/: LuaFile.cpp  LuaSource.cpp
LuaParser/src/Lexer/: LuaDefine.h  LuaDocTokenParser.cpp  LuaIdentify.cpp  LuaLexer.cpp  TextReader.cpp
LuaParser/src/LuaAstNode/: LuaAstNode.cpp
LuaParser/src/Parse/: LuaParser.cpp  Mark.cpp
Test/: CMakeLists.txt
Test/src/: CodeFormatTest.cpp  FilePattern_unitest.cpp  FormatResult_unitest.cpp  FormatStyle_unitest.cpp  Grammar_unitest.cpp  Performance_unitest.cpp  RangeFormat_unitest.cpp  TestHelper.cpp  TestHelper.h  main.cpp
Test2/: CMakeLists.txt
Test2/src/: FormatTest2.cpp  ReflectionEnum.h
Util/: CMakeLists.txt
Util/include/Util/: FileFinder.h  (+4 more)
Util/src/: CommandLine.cpp  FileFinder.cpp  LuaEditorConfig.cpp  StringUtil.cpp  Trie.cpp  Url.cpp  Utf8.cpp
(+749 files in other folders)
